# WITS

./: .gitignore  CLAUDE.md
.claude/: settings.json
.claude/agents/: dry-checker.md  general-code-reviewer.md  security-reviewer.md
.claude/rules/: security-hygiene.md  workflow.md
.claude/skills/claude-review/: SKILL.md
.claude/skills/codex-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-pr/: SKILL.md
deliverables/docs/: DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  QUICK_DEPLOY.md  README_DEPLOYMENT.txt  RFID_SETUP_GUIDE.md  RFID_UI_SETUP.md
deliverables/loams_api/: <FILENAME>  SECURITY_UPDATES.md  auth_helper.php  bulk_update_students.php  config.php  dashboard_summary.php  date_window.php  get_branding.php  get_courses.php  get_courses_by_department.php  get_departments.php  get_library_visits.php  get_report_data.php  register_student.php  reset_visits.php  rfid_login.php  save_branding.php  search_students.php  testupload.php  update_admin_info.php  upload_students_zip.php
deliverables/php_api/: delete_students.php  get_visitors.php  search_students.php  student_login.php
deliverables/sql/: branding_config.sql  wits_app.sql
docs/: LOAMS_UI_Modernization_PRD.md
docs/superpowers/plans/: 2026-06-23-responsive-ui.md  2026-06-23-rfid-integration.md  2026-06-24-admin-page-inner-reflow.md  2026-06-24-rfid-code-mismatch.md  2026-06-24-rfid-input-doubling.md  2026-06-27-ui-modernization.md  2026-07-01-settings-controller-extraction.md  2026-07-02-import-controller-extraction.md  2026-07-02-visitor-controller-extraction.md  2026-07-03-student-controller-extraction.md  2026-07-04-report-controller-extraction.md  2026-07-06-brand-theme-engine.md  2026-07-07-loams2-phase0-proposal.md  2026-07-09-loams2-phase1-witscore-extraction.md  2026-07-11-loams2-phase2-kiosk-parity.md  2026-07-13-loams2-phase3-admin-part1.md  2026-07-19-loams2-phase4c-settings.md  2026-07-21-loams2-phase4d-brand-tokens.md
docs/superpowers/proofs/: 2026-07-09-loams2-phase1-proof.md  2026-07-09-loams2-phase1-render-check.md  2026-07-11-loams2-phase2-kiosk-parity.md
docs/superpowers/proposals/: 2026-07-07-loams2-phase0-modernization-proposal.md
docs/superpowers/reports/: 2026-07-06-phase1-proofs.md
docs/superpowers/specs/: 2026-06-23-responsive-ui-design.md  2026-07-07-loams2-qtquick-design.md  (+13 more)
qt-app/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  adminwindow.ui  apiconfig.h  attachFilesDialog.ui  attachfilesdialog.cpp  attachfilesdialog.h  brandcolormath.h  brandingcontroller.h  brandtheme.cpp  busyindicator.cpp  busyindicator.h  guestwindow.cpp  guestwindow.h  guestwindow.ui  importcontroller.cpp  importdata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reportcontroller.cpp  reportdata.h  reportpreviewdialog.cpp  reportpreviewdialog.h  reportrenderer.cpp  reportrenderer.h  resources.qrc  rfidcodeinspect.h  rfidkeyboardfilter.cpp  rfidkeyboardfilter.h  rfidreader.cpp  rfidreader.h  rfidscandetector.cpp  rfidscandetector.h  settingscontroller.cpp  settingscontroller.h  settingsdata.h  studentcontroller.cpp  (+4 more)
qt-app/cmake/: WitsTest.cmake
qt-app/core/: CMakeLists.txt  appsettings.cpp  appsettings.h  brandingcontroller.cpp  brandtheme.cpp  brandtheme.h  brandthemedata.h  dashboarddata.h  dashboardparser.cpp  dashboardparser.h  importcontroller.h  loginparser.cpp  loginparser.h  reportcontroller.h  rfideventfilterbase.cpp  rfideventfilterbase.h  settingscontroller.cpp  settingscontroller.h  studentcontroller.cpp  studentcontroller.h  studentdata.h  visitlogdata.h  visitlogparser.cpp  visitlogparser.h  visitorcontroller.cpp  visitorcontroller.h
qt-app/libs/QXlsx/: CMakeLists.txt
qt-app/quick/: AdminSession.cpp  AdminSession.h  CMakeLists.txt  HttpForm.cpp  HttpForm.h  Initials.cpp  Initials.h  RfidQuickFilter.cpp  RfidQuickFilter.h  main.cpp
qt-app/quick/models/: BarsModel.cpp  BarsModel.h  RecentLoginsModel.cpp  RecentLoginsModel.h  SearchResultsModel.cpp  SearchResultsModel.h  VisitLogRowsModel.cpp  VisitLogRowsModel.h
qt-app/quick/qml/: AppShell.qml
qt-app/quick/qml/admin/: AdminScreen.qml  DashboardScreen.qml  DatabaseScreen.qml  ReportingScreen.qml  SearchScreen.qml  SettingsScreen.qml  VisitLogsScreen.qml
qt-app/quick/qml/components/: LBarChart.qml  LButton.qml  LCard.qml  LComboBox.qml  LConfirmDialog.qml  LDialog.qml  LEyebrow.qml  LKioskGradient.qml  LPageHeader.qml  LPulseDot.qml  LSegmented.qml  LSideNav.qml  LSidebarBrand.qml  LStatTile.qml  LTable.qml  LTextField.qml  LToast.qml
qt-app/quick/qml/kiosk/: BrandPanel.qml  GuestDialog.qml  KioskFeedRow.qml  KioskMain.qml  KioskScreen.qml
qt-app/quick/qml/theme/: Theme.qml
qt-app/quick/tests/: tst_adminsession.cpp  tst_appshell.cpp  tst_barsmodel.cpp  tst_dashboardviewmodel.cpp  tst_guestviewmodel.cpp  tst_httpform.cpp  tst_initials.cpp  tst_kioskviewmodel.cpp  tst_navigator.cpp  tst_qml_admin.cpp  tst_qml_admin.qml  tst_qml_adminshell.qml  tst_qml_components.cpp  tst_qml_components.qml  tst_qml_kiosk.cpp  tst_qml_kiosk.qml  tst_qml_theme.cpp  tst_qml_theme.qml  tst_rfidquickfilter.cpp  tst_schoolinfoviewmodel.cpp  tst_searchviewmodel.cpp  tst_settingsviewmodel.cpp  tst_themeviewmodel.cpp  tst_visitlogsviewmodel.cpp
qt-app/quick/viewmodels/: DashboardViewModel.cpp  DashboardViewModel.h  GuestViewModel.cpp  GuestViewModel.h  KioskViewModel.cpp  KioskViewModel.h  Navigator.cpp  Navigator.h  SchoolInfoViewModel.cpp  SchoolInfoViewModel.h  SearchViewModel.cpp  SearchViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  ThemeViewModel.cpp  ThemeViewModel.h  VisitLogsViewModel.cpp  VisitLogsViewModel.h
qt-app/resources/: wits.qss
qt-app/tests/: CMakeLists.txt  tst_apiconfig.cpp  tst_brandingcontroller.cpp  tst_brandtheme.cpp  tst_dashboardparser.cpp  tst_importcontroller.cpp  tst_loginparser.cpp  tst_reportcontroller.cpp  tst_reportrenderer.cpp  tst_responsive_ui.cpp  tst_rfidcodeinspect.cpp  tst_rfidkeyboardfilter.cpp  tst_rfidscandetector.cpp  tst_studentcontroller.cpp  tst_theme.cpp  tst_visitlogparser.cpp  tst_visitorcontroller.cpp
qt-app/testsupport/: settingsisolation.cpp
(+3 files in other folders)
